The Movie Adapter is added to display the poster of the movie with the Picasso API

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,7 +20,7 @@ android {
     }
 
     buildTypes.each {
-        it.buildConfigField 'String', 'THE_MOVIE_DB_API_KEY', '""'
+        it.buildConfigField 'String', 'THE_MOVIE_DB_API_KEY', ''
     }
 
 
@@ -35,5 +35,6 @@ dependencies {
     compile 'com.android.support:support-v4:23.4.0'
     compile 'com.android.support:design:23.4.0'
     compile 'com.android.support:support-vector-drawable:23.4.0'
+    compile 'com.squareup.picasso:picasso:2.5.2'
     testCompile 'junit:junit:4.12'
 }
