--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,5 +36,7 @@ dependencies {
     compile 'com.android.support:design:23.4.0'
     compile 'com.android.support:support-vector-drawable:23.4.0'
     compile 'com.squareup.picasso:picasso:2.5.2'
+    compile 'com.android.support:recyclerview-v7:23.0.0'
+    compile 'com.android.support:cardview-v7:23.0.0'
     testCompile 'junit:junit:4.12'
 }
