--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,6 +29,13 @@
                 android:value="com.example.android.popularmovies.app.MainActivity" />
         </activity>
 
+        <provider
+            android:authorities="@string/content_authority"
+            android:name=".data.MovieProvider"
+            android:label="Sunshine"
+            android:exported="false"
+            android:syncable="true"/>
+
     </application>
 
 </manifest>
